# vcpkg-git-example

./: CMakeLists.txt  main.cpp  vcpkg.json
cmake/: config.cmake.in
include/: example.h
src/: example.cpp
